--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "form-validation-lib",
-  "version": "1.0.0",
+  "version": "1.0.1",  
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "echo \"jest\" && exit 1"
   },
   "author": "Syed Fardeen Jeelani",
   "license": "MIT",
