--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "form-validation-lib",
-  "version": "1.0.1",  
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"jest\" && exit 1"
+    "test": "jest"
   },
   "author": "Syed Fardeen Jeelani",
   "license": "MIT",
@@ -25,5 +25,6 @@
   "homepage": "https://github.com/syedfardeenjeelani/form-validation-lib#readme",
   "devDependencies": {
     "jest": "^29.7.0"
-  }
+  },
+  "private": true
 }
